--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    <title>First Vega-Lite graph </title>
+    <title>Australian Plants - At Risk </title>
 </head>
 
 <body>
@@ -85,3 +85,4 @@
 </body>
 
 </html>
+
