--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             
         }
 
+        .visualisation.bar_chart{
+            height: 800px;
+        }
+
         .references {
             text-align: left;
         }
@@ -258,3 +262,4 @@
 </body>
 
 </html>
+
